# phaser

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE
phaser/: BUILD.bazel  gen.cc  perf_test.cc  phaser_library.bzl  phaser_test.cc
phaser/compiler/: BUILD.bazel  enum_gen.cc  enum_gen.h  gen.cc  gen.h  main.cc  message_gen.cc  message_gen.h
phaser/docs/: phaser_user_guide.md
phaser/runtime/: BUILD.bazel  any.h  fields.h  iterators.h  message.cc  message.h  message_test.cc  payload_buffer.cc  payload_buffer.h  phaser_bank.cc  phaser_bank.h  proto_buffer.h  runtime.h  union.h  vectors.h  wireformat.cc  wireformat.h  wireformat_test.cc
phaser/testdata/: BUILD  Foo.proto  Test.proto  TestMessage.proto  vision.proto
